--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,20 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Custom base styles go here */
 :root {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color: #1a1a1a;
   background-color: whitesmoke;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
+/* Existing global styles pre-tailwind */
 * {
   box-sizing: border-box;
 }
